[gd_scene load_steps=6 format=3 uid="uid://btdesxnsuaggv"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_e58nx"]
[ext_resource type="Texture2D" uid="uid://ce4p1k3nrxm41" path="res://Art/PlaceholderArt/FlashLight.png" id="2_fphfx"]
[ext_resource type="Texture2D" uid="uid://crw0peyi8661d" path="res://Art/PlaceholderArt/PlantLight.png" id="3_xq8ff"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gvdvt"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0odh5"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(549, 279)
collision_layer = 10
motion_mode = 1
script = ExtResource("1_e58nx")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gvdvt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_xq8ff")

[node name="LightArea" type="Area2D" parent="."]
scale = Vector2(1.8, 1.8)
collision_layer = 0
collision_mask = 14

[node name="LightCollider" type="CollisionPolygon2D" parent="LightArea"]
polygon = PackedVector2Array(0, 0, 70, 29, 70, -29)

[node name="GlowCollider" type="CollisionShape2D" parent="LightArea"]
shape = SubResource("CircleShape2D_0odh5")

[node name="Sprite2D" type="Sprite2D" parent="LightArea"]
visible = false
modulate = Color(1, 1, 0.454902, 0.247059)
position = Vector2(27.5, 0)
texture = ExtResource("2_fphfx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="GlowLight" type="PointLight2D" parent="."]
color = Color(1, 0.721569, 0.470588, 1)
shadow_item_cull_mask = 0
texture = ExtResource("3_xq8ff")
texture_scale = 0.15

[node name="FlashLight" type="PointLight2D" parent="."]
scale = Vector2(1.8, 1.8)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.894118)
shadow_filter = 1
shadow_filter_smooth = 0.5
texture = ExtResource("2_fphfx")
offset = Vector2(27.5, 0)

[node name="RayCast2D" type="RayCast2D" parent="."]

[connection signal="body_entered" from="LightArea" to="." method="_on_light_area_body_entered"]
[connection signal="body_exited" from="LightArea" to="." method="_on_light_area_body_exited"]
